add base styles and index doc base layout

--- a/index.html
+++ b/index.html
@@ -2,15 +2,26 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/css/master.css">
+    <link rel="stylesheet" href="master.css">
     <title>A Tribute to Robin Williams | freecodecamp.org "Build a Tribute Page" project</title>
   </head>
   <body>
-<header id="header">
-</header>
-<main id="main">
-</main>
-<footer id="footer">
-</footer>
+    <div id="main">
+      <header>
+        <div id="header">
+        <h1>Robin Williams</h1>
+        </div>
+      </header>
+      <main>
+        <div id="tribute-info">
+        <h2>Main content</h2>
+        </div>
+      </main>
+      <footer>
+        <div id="footer">
+          <p>Footer content</p>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
