complete main layout

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="master.css">
     <title>A Tribute to Robin Williams | freecodecamp.org "Build a Tribute Page" project</title>
   </head>
@@ -9,17 +10,34 @@
     <div id="main">
       <header>
         <div id="header">
-        <h1>Robin Williams</h1>
+          <div id="img-div">
+            <img src="robin-williams-header.jpg" alt="Picture of a young Robin Williams">
+            <h1 id="title">Robin</h1>
+            <h1 id="title-two">Williams</h1>
+            <p class="header-quote">“What’s right is what’s left if you do everything else wrong.”</p>
+          </div>
         </div>
       </header>
       <main>
         <div id="tribute-info">
-        <h2>Main content</h2>
+          <div class="heading-container">
+            <h2>Main Heading</h2>
+            <div class="tribute-story-container">
+              <div class="year-box">
+                <p>Text</p>
+              </div>
+              <div class="story-box">
+                <p>Text</p>
+              </div>
+            </div>
+          </div>
         </div>
       </main>
       <footer>
         <div id="footer">
-          <p>Footer content</p>
+          <div id="footer-div">
+            <p>Footer content</p>
+          </div>
         </div>
       </footer>
     </div>
