add style to layours with sample text

--- a/index.html
+++ b/index.html
@@ -22,13 +22,43 @@
         <div id="tribute-info">
           <div class="heading-container">
             <h2>Main Heading</h2>
-            <div class="tribute-story-container">
-              <div class="year-box">
-                <p>Text</p>
-              </div>
-              <div class="story-box">
-                <p>Text</p>
-              </div>
+          </div>
+          <div class="intro-container">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+          <div class="tribute-story-container">
+            <div class="year-box">
+              <h2 class="start-year">1950</h2>
+              <div class="arrow-down"></div>
+              <h2 class="end-year">1960</h2>
+            </div>
+            <div class="story-box">
+              <ul>
+                <li>Sed ut perspiciatis unde omnis iste natus error sit voluptatem</li>
+                <li>At vero eos et accusamus et iusto odio dignissimos ducimus</li>
+                <li>Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis</li>
+                <li>Sed ut perspiciatis unde omnis iste natus error sit voluptatem</li>
+                <li>At vero eos et accusamus et iusto odio dignissimos ducimus</li>
+                <li>Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis</li>
+              </ul>
+            </div>
+          </div>
+          <div class="tribute-story-container">
+            <div class="year-box">
+              <h2 class="start-year">1950</h2>
+              <div class="arrow-down"></div>
+              <h2 class="end-year">1960</h2>
+            </div>
+            <div class="story-box">
+              <ul>
+                <li>Sed ut perspiciatis unde omnis iste natus error sit voluptatem</li>
+                <li>At vero eos et accusamus et iusto odio dignissimos ducimus</li>
+                <li>Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis</li>
+                <li>Sed ut perspiciatis unde omnis iste natus error sit voluptatem</li>
+                <li>At vero eos et accusamus et iusto odio dignissimos ducimus</li>
+                <li>Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis</li>
+              </ul>
             </div>
           </div>
         </div>
@@ -36,7 +66,7 @@
       <footer>
         <div id="footer">
           <div id="footer-div">
-            <p>Footer content</p>
+            <p>Design by bayzoo &copy; 2019</p>
           </div>
         </div>
       </footer>
