add google font and wiki button

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="master.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap">
     <title>A Tribute to Robin Williams | freecodecamp.org "Build a Tribute Page" project</title>
   </head>
   <body>
@@ -60,6 +61,9 @@
                 <li>Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis</li>
               </ul>
             </div>
+          </div>
+          <div class="button-container">
+            <a href="https://en.wikipedia.org/wiki/Robin_Williams" target="_blank"><p class="wiki-button">Robin Williams Wiki Page</p></a>
           </div>
         </div>
       </main>
