--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
           </div>
           <div class="tribute-story-container">
             <div class="year-box">
-              <h2 class="start-year">1950</h2>
-              <div class="arrow-down"></div>
-              <h2 class="end-year">1960</h2>
+              <div class="year-box-mobile">
+                <h2 class="start-year">1950</h2>
+                <div class="arrow"></div>
+                <h2 class="end-year">1960</h2>
+              </div>
             </div>
             <div class="story-box">
               <ul>
@@ -47,9 +49,11 @@
           </div>
           <div class="tribute-story-container">
             <div class="year-box">
-              <h2 class="start-year">1950</h2>
-              <div class="arrow-down"></div>
-              <h2 class="end-year">1960</h2>
+              <div class="year-box-mobile">
+                <h2 class="start-year">1950</h2>
+                <div class="arrow"></div>
+                <h2 class="end-year">1960</h2>
+              </div>
             </div>
             <div class="story-box">
               <ul>
