add non mobile amends to year box

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
           </div>
           <div class="tribute-story-container">
             <div class="year-box">
-              <div class="year-box-mobile">
-                <h2 class="start-year">1950</h2>
+              <h2>1950</h2>
+              <div class="arrow-container">
                 <div class="arrow"></div>
-                <h2 class="end-year">1960</h2>
               </div>
+              <h2>1960</h2>
             </div>
             <div class="story-box">
               <ul>
@@ -49,11 +49,11 @@
           </div>
           <div class="tribute-story-container">
             <div class="year-box">
-              <div class="year-box-mobile">
-                <h2 class="start-year">1950</h2>
+              <h2>1950</h2>
+              <div class="arrow-container">
                 <div class="arrow"></div>
-                <h2 class="end-year">1960</h2>
               </div>
+              <h2>1960</h2>
             </div>
             <div class="story-box">
               <ul>
