add final text and accessability tags

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <header>
         <div id="header">
           <div id="img-div">
-            <img src="robin-williams-header.jpg" alt="Picture of a young Robin Williams">
+            <img id="image" src="robin-williams-header.jpg" alt="Picture of a young Robin Williams">
             <h1 id="title">Robin</h1>
             <h1 id="title-two">Williams</h1>
             <p class="header-quote">“What’s right is what’s left if you do everything else wrong.”</p>
@@ -21,116 +21,136 @@
       </header>
       <main>
         <div id="tribute-info">
+          <article>
+            <div class="heading-container">
+              <h2>Prologue</h2>
+            </div>
+            <div class="text-container">
+              <p>Every time I hear the name Robbin Williams it conjures up happy and lucid memories of my childhood during the late 1980's and early 1990's. The films Good Morning Vietnam (even though I was too young to understand the US and Vietnam conflict), Dead Poets Society, Mrs Doubtfire and Jumanji were a few of the films Williams starred in that I rank in my top 10 films ever made; without his roles in these movies they wouldn't likely rank in my top 50.</p>
+              <p>The day that Williams passed was a day the world lost a true comedy genius, and I still feel a brief moment of grief when I see or hear his name, but I quickly follow up with a smile at the memory of his best moments on screen. His incredible ability to improvise any voice, accent or character with lighting speed coupled with his ability to act made him a national (and worldwide) treasure.</p>
+              <p>This tribute by no means fully justifies and appreciates what Williams gave to the world during his lifetime however I've listed below key moments in his life from birth all sourced from his Wikipedia page.</p>
+            </div>
+          </article>
+          <section>
           <div class="heading-container">
-            <h2>Prologue</h2>
+            <h2>Timeline</h2>
           </div>
-          <div class="intro-container">
-            <p>Every time I hear the name Robbin Williams it conjures up happy and lucid memories of my childhood during the late 1980's and early 1990's. The films Good Morning Vietnam (even though I was too young to understand the US and Vietnam conflict), Dead Poets Society, Mrs Doubtfire and Jumanji were a few of the films Williams starred in that I rank in my top 10 films ever; without his roles in these movies they wouldn't likely rank in my top 50.</p>
-            <p>The day that Williams passed was a day the world lost a true comedy genius, and I still feel a brief moment of grief when I see or hear his name, but I quickly follow up with a smile at the memory of his best moments on screen. His incredible ability to improvise any voice, accent or character with lighting speed coupled with his ability to act made him a national (and worldwide) treasure.</p>
-            <p>This tribute by no means fully justifies and appreciates what Williams gave to the world during his lifetime however I've listed below key moments in his life from birth all sourced from his Wikipedia page.</p>
-          </div>
-          <div class="tribute-story-container">
-            <div class="year-box">
-              <h2>1952</h2>
-              <div class="arrow-container">
-                <div class="arrow"></div>
+            <div class="tribute-story-container">
+              <div class="year-box">
+                <h2>1952</h2>
+                <div class="arrow-container">
+                  <div class="arrow"></div>
+                </div>
+                <h2>1969</h2>
               </div>
-              <h2>1969</h2>
-            </div>
-            <div class="story-box">
-              <ul>
-                <li>Born in St. Lukes Hospital in Chicago, Illinois on July 21, 1951</li>
-                <li>Has English, Scottish, Welsh, Irish, German and French ancestry</li>
-                <li>Attended Gorton Elementary School and then Detroit Country Day School following relocation in 1963</li>
-                <li>Described himself as shy until he got involved in drama classes</li>
-                <li>Excelled in school, was elected class president and graduated in 1969</li>
-                <li>Was voted "Most Likely Not to Succeed" and "Funniest" by his classmates prior to his graduation</li>
-              </ul>
-            </div>
-          </div>
-          <div class="tribute-story-container">
-            <div class="year-box">
-              <h2>1969</h2>
-              <div class="arrow-container">
-                <div class="arrow"></div>
+              <div class="story-box">
+                <ul>
+                  <li>Born in St. Lukes Hospital in Chicago, Illinois on July 21, 1951</li>
+                  <li>Has English, Scottish, Welsh, Irish, German and French ancestry</li>
+                  <li>Attended Gorton Elementary School and then Detroit Country Day School following relocation in 1963</li>
+                  <li>Described himself as shy until he got involved in drama classes</li>
+                  <li>Excelled in school, was elected class president and graduated in 1969</li>
+                  <li>Was voted "Most Likely Not to Succeed" and "Funniest" by his classmates prior to his graduation</li>
+                </ul>
               </div>
-              <h2>1976</h2>
             </div>
-            <div class="story-box">
-              <ul>
-                <li>Enrolled at college in California to study political science but dropped out to pursue acting</li>
-                <li>Studied theatre for three years at the College of Marin in California</li>
-                <li>Would often improvise during his time on stage leaving the cast members in hysterics</li>
-                <li>His drama professor predicted he "was going to be something special"</li>
-                <li>Attained a full scholarship to the Juilliard in NYC in 1973 for three year, along with Christopher Reeve</li>
-                <li>Described as having enormous energy who could perform in many accents, but silenced critics by staying in character during a Tennessee Williams performance</li>
-                <li>Left Juilliard in his junior year in 1976 after being told there was nothing more he could be taught there and was described by one of his teachers as a "genius"</li>
-              </ul>
-            </div>
-          </div>
-          <div class="tribute-story-container">
-            <div class="year-box">
-              <h2>1976</h2>
-              <div class="arrow-container">
-                <div class="arrow"></div>
+            <div class="tribute-story-container">
+              <div class="year-box">
+                <h2>1969</h2>
+                <div class="arrow-container">
+                  <div class="arrow"></div>
+                </div>
+                <h2>1976</h2>
               </div>
-              <h2>1987</h2>
-            </div>
-            <div class="story-box">
-              <ul>
-                <li>Started performing stand up comedy in the San Francisco Bay Area and then to Los Angeles</li>
-                <li>Struggled at times with using drugs and alcohol to help cope with the pressures of stand-up</li>
-                <li>Married his first wife Valerie Velardi in 1978</li>
-                <li>Appeared on the show Laugh-In which launched his television career</li>
-                <li>Starred in Mork & Mindy from 1978 to 1982 which turned him into a nationwide superstar, which at its peak had 60 million viewers</li>
-                <li>First son Zak was born in 1983</li>
-                <li>Continued his stand-up work with various television shows and was described as a "hurricane" during his appearance on Late Night with David Letterman</li>
-              </ul>
-            </div>
-          </div>
-          <div class="tribute-story-container">
-            <div class="year-box">
-              <h2>1987</h2>
-              <div class="arrow-container">
-                <div class="arrow"></div>
+              <div class="story-box">
+                <ul>
+                  <li>Enrolled at college in California to study political science but dropped out to pursue acting</li>
+                  <li>Studied theatre for three years at the College of Marin in California</li>
+                  <li>Would often improvise during his time on stage leaving the cast members in hysterics</li>
+                  <li>His drama professor predicted he "was going to be something special"</li>
+                  <li>Attained a full scholarship to the Juilliard in NYC in 1973 for three years, along with Christopher Reeve</li>
+                  <li>Described as having enormous energy who could perform in many accents, and silenced critics by strictly remaining in character during a Tennessee Williams performance</li>
+                  <li>Left Juilliard in his junior year in 1976 after being told there was nothing more he could be taught there and was described by one of his teachers as a "genius"</li>
+                </ul>
               </div>
-              <h2>2009</h2>
             </div>
-            <div class="story-box">
-              <ul>
-                <li>Career in film was launched in 1987 after starring in the film "Good Morning Vietnam" where he improvised most of his lines unscripted</li>
-                <li>Married his second wife Marsha Garces in 1989 and had a daughter (Zelda) and a son (Cody)</li>
-                <li>Starred in the films "Dead Poets Society" and "Hook" in 1989 and 1991 respectively; for Hook he had to lose 25 pounds for the role</li>
-                <li>Took the voice of "The Genie" in the animated Disney film "Aladdin", a role that was specifically created for him</li>
-                <li>Performed the role of a therapist in the film "Good Will Hunting" in 1997</li>
-                <li>Was the voice in numerous animated films and was named a Disney Legend in 2009</li>
-                <li>Williams was influenced by numerous successful actors such as Dustin Hoffman, Robert De Niro and Woody Allen to name a few</li>
-              </ul>
-            </div>
-          </div>
-          <div class="tribute-story-container">
-            <div class="year-box">
-              <h2>2009</h2>
-              <div class="arrow-container">
-                <div class="arrow"></div>
+            <div class="tribute-story-container">
+              <div class="year-box">
+                <h2>1976</h2>
+                <div class="arrow-container">
+                  <div class="arrow"></div>
+                </div>
+                <h2>1987</h2>
               </div>
-              <h2>2019</h2>
+              <div class="story-box">
+                <ul>
+                  <li>Started performing stand up comedy in the San Francisco Bay Area and then in Los Angeles</li>
+                  <li>Struggled at times with using drugs and alcohol to help cope with the pressures of stand-up</li>
+                  <li>Married his first wife Valerie Velardi in 1978</li>
+                  <li>Appeared on the show Laugh-In which launched his television career</li>
+                  <li>Starred in Mork & Mindy from 1978 to 1982 which turned him into a nationwide superstar, which at its peak had 60 million viewers</li>
+                  <li>First son Zak was born in 1983</li>
+                  <li>Continued his stand-up work with various television shows and was described as a "hurricane" during his appearance on Late Night with David Letterman</li>
+                </ul>
+              </div>
             </div>
-            <div class="story-box">
-              <ul>
-                <li>Hospitalised in 2009 due to heart problems</li>
-                <li>Divorced his second wife in 2010 and married Susan Schnieder in 2011</li>
-                <li>Admitted himself into rehab for alcoholism mid 2014</li>
-                <li>Suffering from depression and early stage Parkinson's disease, Williams took his own life in August 2014</li>
-                <li>Following his death the USO thanked Williams for entertaining over 90,000 troops in 13 different countries during his career</li>
-                <li>In 2018, HBO produced a documentary about Williams life and career called "Robin Williams: Come Inside My Mind"</li>
-                <li>Williams first grandson was born in May 2019 named McLaurin "Mickey" Clement Williams</li>
-              </ul>
+            <div class="tribute-story-container">
+              <div class="year-box">
+                <h2>1987</h2>
+                <div class="arrow-container">
+                  <div class="arrow"></div>
+                </div>
+                <h2>2009</h2>
+              </div>
+              <div class="story-box">
+                <ul>
+                  <li>Career in film was launched in 1987 after starring in the film "Good Morning Vietnam" where he improvised most of his lines unscripted</li>
+                  <li>Married his second wife Marsha Garces in 1989 and had a daughter (Zelda) and a son (Cody)</li>
+                  <li>Starred in the films "Dead Poets Society" and "Hook" in 1989 and 1991 respectively; for Hook he had to lose 25 pounds for the role</li>
+                  <li>Took the voice of "The Genie" in the animated Disney film "Aladdin", a role that was specifically created for him</li>
+                  <li>Starred in the film Mrs Doubtfire in 1993 which grossed over 441.3 million USD at the box office</li>
+                  <li>Performed the role of a man trapped in Jumanji in 1995 and a therapist in the film "Good Will Hunting" in 1997</li>
+                  <li>Was the voice in numerous animated films and was named a Disney Legend in 2009</li>
+                  <li>Williams acting was influenced by numerous successful actors such as Dustin Hoffman, Robert De Niro and Woody Allen to name a few</li>
+                </ul>
+              </div>
             </div>
-          </div>
-          <div class="button-container">
-            <a href="https://en.wikipedia.org/wiki/Robin_Williams" target="_blank"><p class="wiki-button">Robin Williams Wiki Page</p></a>
-          </div>
+            <div class="tribute-story-container">
+              <div class="year-box">
+                <h2>2009</h2>
+                <div class="arrow-container">
+                  <div class="arrow"></div>
+                </div>
+                <h2>2019</h2>
+              </div>
+              <div class="story-box">
+                <ul>
+                  <li>Hospitalised in 2009 due to heart problems</li>
+                  <li>Divorced his second wife in 2010 and married Susan Schnieder in 2011</li>
+                  <li>Admitted himself into rehab for alcoholism mid 2014</li>
+                  <li>Suffering from depression and early stage Parkinson's disease, Williams took his own life in August 2014</li>
+                  <li>Following his death the USO thanked Williams for entertaining over 90,000 troops in 13 different countries during his career</li>
+                  <li>In 2018, HBO produced a documentary about Williams life and career called "Robin Williams: Come Inside My Mind"</li>
+                  <li>Williams first grandson was born in May 2019 named McLaurin "Mickey" Clement Williams</li>
+                </ul>
+              </div>
+            </div>
+          </section>
+          <article>
+            <div class="heading-container">
+              <h2>Summary</h2>
+            </div>
+            <div class="text-container">
+              <p>My timeline above is vastly shortened and even his Wikipedia page struggles to truly summarise Williams lifetime achievements. </p>
+              <p>I wholly recommend looking at a few of his stand-up routines on <a id="youtube-link" href="https://www.youtube.com" target="_blank">youtube.com</a>; they'll give you a smile for the day!</p>
+              <p>You can visit Robin Williams Wikipedia page by clicking the button below.</p>
+            </div>
+          </article>
+          <section>
+            <div class="button-container">
+              <a id="tribute-link" href="https://en.wikipedia.org/wiki/Robin_Williams" target="_blank"><p class="wiki-button">Robin Williams Wiki Page</p></a>
+            </div>
+          </section>
         </div>
       </main>
       <footer>
